Add tests for UserServiceImpl